# production-engineering-lab

./: .gitignore  README.md
.github/workflows/: practice-ci.yml
docs/: Practical_Linux_Docker_Python_Networking_FastAPI_CICD_Guide.md
docs/cheatsheets/: crud_rest_put_patch.md  sql_vs_sparql_vs_es.md
docs/curriculum/: 00-uv-python-environment.md  01-linux-fundamentals.md  02-git-version-control.md  02-networking-debug-lab.md  03-networking-debug-lab.md  03-rest-api-design.md  04-database-fundamentals.md  04-fastapi-professional.md  04b-sql-mastery.md  05-docker-containerization.md  05-rest-api-design.md  06-ci-cd-automation.md  06-fastapi-professional.md  07-monitoring-observability.md  07-rest-api-crud-labs.md  08-capstone-project.md  08-git-version-control.md  08-postgresql-production.md  09-database-fundamentals.md  09-docker-containerization.md  09-git-version-control.md  10-database-fundamentals.md  10-docker-debug-labs.md  10-security-fundamentals.md  11-cloud-infrastructure-basics.md  11-security-fundamentals.md  12-cloud-infrastructure-basics.md  12-nginx-reverse-proxy.md  13-capstone-project.md  13-ci-cd-automation.md  13-nginx-reverse-proxy.md  14-cicd-practice.md  14-postgresql-production.md  15-elasticsearch-practice.md  15-monitoring-observability.md  16-cloud-infrastructure-basics.md  16-rdf-sparql-labs.md  17-ansible-practice.md  (+8 more)
practical-production-service/: Dockerfile  main.py  pyproject.toml  requirements.exported.txt
practical-production-service/src/appcore/config/: settings.py
practical-production-service/tests/: test_smoke.py
practice/: README.md
practice/curriculum/17-rest-api-crud-labs/: README.md  pyproject.toml
practice/curriculum/17-rest-api-crud-labs/src/crud_api/: database.py  main.py  routes.py
practice/curriculum/20-capstone/: .env.example  Dockerfile  STRUCTURE.md  docker-compose.yml  pyproject.toml  verify.sh
practice/curriculum/20-capstone/configs/: nginx.conf
practice/curriculum/20-capstone/infra/terraform/: main.tf
practice/curriculum/20-capstone/scripts/: health_check.sh
practice/curriculum/20-capstone/src/appcore/api/: app.py  auth.py  dependencies.py  rate_limiter.py  routes.py  security.py
practice/curriculum/20-capstone/src/appcore/db/: __init__.py  cache.py  database.py  repository.py
practice/curriculum/20-capstone/tests/: test_auth.py  test_db.py
(+333 files in other folders)
