[project]
name = "appcore"
version = "0.1.0"
description = "Production-ready service for the bootcamp"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
appcore-serve = "appcore.cli:serve"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/appcore"]