# TODO: Fill in your project metadata
# [project]
# name = "practical-production-service"
# version = "1.0.0"
# description = "Production-ready ML service — Capstone project"
# requires-python = ">=3.11"
# dependencies = [
#     "fastapi>=0.100",
#     "uvicorn[standard]>=0.23",
#     "pydantic>=2.0",
#     "prometheus-client>=0.17",
#     "python-json-logger>=2.0",
#     "python-dotenv>=1.0",       # .env loading (Section 11)
#     "redis>=5.0",               # Optional caching (Section 04)
# ]
#
# [project.optional-dependencies]
# dev = [
#     "pytest>=7.0",
#     "httpx>=0.24",
#     "ruff>=0.1",
#     "pytest-cov>=4.0",
# ]
#
# [build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"
